--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da-DK">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SORA Ansøgning</title>
+    <header>
+        <div class="topnav">
+            <a href="#login">Login</a>
+            <h1>SORA Ansøgning</h1>
+        </div>
+
+        <div class="headerPicture">
+            <video autoplay loop height="400" width="300"> 
+                <source src="Pictures/broll.mp4" type="video/mp4">
+            </video>
+        </div>
+    </header>
 </head>
 <body>
     
