--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
             <a href="#login">Login</a>
             <h1>SORA Ansøgning</h1>
         </div>
-
-        <div class="headerPicture">
-            <video autoplay loop height="400" width="300"> 
-                <source src="Pictures/broll.mp4" type="video/mp4">
-            </video>
-        </div>
     </header>
 </head>
 <body>
+    <video autoplay loop id="myVideo"> 
+        <source src="Pictures/broll.mp4" type="video/mp4">
+    </video>
     
+    
+
+    <div class="content">
+        <h1>Overskrift</h1>
+        <p>Her skal der bare stå noget fucking fedt!!</p>
+        <button id="myBtn">Ansøg nu!</button>
+    </div>
+
 </body>
 </html>
