--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="topnav">
             <a href="#login">Login</a>
-            <h1>SORA Ansøgning</h1>
+            <h1>SW B2-21 2. semester projekt</h1>
         </div>
     </header>
 </head>
@@ -18,7 +18,7 @@
         <source src="Pictures/broll.mp4" type="video/mp4">
     </video>
     
-    
+
 
     <div class="content">
         <h1>Overskrift</h1>
