--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="da-DK">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SORA Ansøgning</title>
     <header>
-        <div class="topnav">
-            <a href="#login">Login</a>
-            <h1>SW B2-21 2. semester projekt</h1>
-        </div>
+      <div class="topnav">
+        <a href="#login">Login</a>
+        <h1>SW B2-21 2. semester projekt</h1>
+      </div>
     </header>
-</head>
-<body>
-    <video autoplay loop id="myVideo"> 
-        <source src="Pictures/broll.mp4" type="video/mp4">
+  </head>
+  <body>
+    <video id="myVideo" autoplay loop muted>
+      <source src="Pictures/broll.mp4" type="video/mp4" />
     </video>
-    
-
 
     <div class="content">
-        <h1>Overskrift</h1>
-        <p>Her skal der bare stå noget fucking fedt!!</p>
-        <button id="myBtn">Ansøg nu!</button>
+      <h1>Overskrift</h1>
+      <p>Her skal der bare stå noget fucking fedt!!</p>
+      <button id="myBtn">Ansøg nu!</button>
     </div>
-
-</body>
+  </body>
 </html>
