Har lavet login-page, tilføjet faktaBtn

--- a/login.html
+++ b/login.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="loginStyles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
 
-    <div class="loginForm">
-        <form>
-            <label for="Username">Username:</label><br>
-            <input type="text" id="username" name="username"><br>
-            <label for="Password">Password:</label><br>
-            <input type="text" id="password" name="password">
-            <input type="submit" id="submitBtn" value="Login">
-          </form>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
+  <title>Login</title>
+  <link rel="stylesheet" href="loginStyles.css">
+  <script defer src="login-page.js"></script>
+  <header>
+    <div class="topnav">
+        <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
+        <button id="faktaBtn">Læs fakta om SORA her</button>
     </div>
+  </header>
+</head>
+
+<body>
+  <main id="main-holder">
+    <h1 id="login-header">Login</h1>
+    
+    <div id="login-error-msg-holder">
+      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+    </div>
+    
+    <form id="login-form">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="submit" value="Login" id="login-form-submit">
+    </form>
+
+    <img class="backgroundImage" src="Pictures/HeaderPicture.jpg"></img>
+  
+  </main>
 </body>
+
 </html>
