Top navbar now working as intended and styled, sidenav bar added but in progress

--- a/faktaomansoegning.html
+++ b/faktaomansoegning.html
@@ -12,6 +12,9 @@
     </header>
   </head>
   <body>
+    <div class="sidenav" id="fakta_sidenav">
+       <h1>Yderligere information</h1>
+</div>
       <img src="/Pictures/HeaderPicture.jpg" id="background_picture"></img>
      <div class="boxed"id="text_box">
          <script src="fakta.js"></script>
