--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="da-DK">
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +32,7 @@
       <button class="dopebtn" id="myBtn2">Hihi</button>
     </div>
 
-    <script src="mainscript.js"></script>
+    <script src="JS/mainscript.js"></script>
   </body>
 </html>
 
