--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
   <title>Login</title>
-  <link rel="stylesheet" href="loginStyles.css">
-  <script defer src="login-page.js"></script>
+  <link rel="stylesheet" href="styles/loginStyles.css">
+  <script defer src="JS/login-page.js"></script>
   <header>
     <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
