--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <div id="main-page">
       <div class="content">
-        <h1>Overskrift</h1>
-        <p>Her skal der bare stå noget fucking fedt!!</p>
+        <h1>SORA</h1>
+        <p>Ønsker du at flyve med droner i den specifikke kategori?</p>
         <button class="dopebtn" id="myBtn">Ansøg nu!</button>
       </div>
     </div>
