Registrering synes at virke, test plz

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>SORA Ansøgning</title>
     <header>
       <div class="topnav">
-        <button id="loginBtn">Login</button>
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
+        <button id="registerBtn">Register</button>
+        <button id="loginBtn">Login</button>
       </div>
     </header>
   </head>
