--- a/registrering.html
+++ b/registrering.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
-  <title>Login</title>
-  <link rel="stylesheet" href="styles/loginStyles.css">
-  <script defer src="JS/login-page.js"></script>
+  <title>Register</title>
+  <link rel="stylesheet" href="styles/RegisterStyles.css">
+  <script defer src="JS/registrering.js"></script>
   <header>
     <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
@@ -21,16 +21,17 @@
 <body>
   <div class="main-content">
     <main id="main-holder">
-      <h1 id="login-header">Login</h1>
+      <h1 id="register-header">Register</h1>
       
-      <div id="login-error-msg-holder">
-        <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+      <div id="register-error-msg-holder">
+        <p id="register-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
       </div>
       
-      <form id="login-form">
-        <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-        <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-        <input type="submit" value="Login" id="login-form-submit">
+      <form id="register-form">
+        <input type="text" name="username" id="username-field" class="register-form-field" placeholder="Username">
+        <input type="password" name="password" id="password-field" class="register-form-field" placeholder="Password">
+        <input type="type password" name="confirmPassword" id="confirmPassword-field" class="register-form-field" placeholder="Confirm Password">
+        <input type="submit" value="register" id="register-form-submit">
       </form>
     </main>
   </div>
