--- a/form/grc.html
+++ b/form/grc.html
@@ -18,20 +18,20 @@
         <div class="content">
             <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
         </div>
-        <!-- <form id="GRC"> -->
-            <form id="GRC">
+        <div id="GRC">
+            <form id="q1"> <!-- q1 -->
             <fieldset> <legend> Drones maksimale karakteristika? </legend>
-                <input type="radio" id="01meter" name="droneDimension" value="numA"> 1 meter <br>
+                <input type="radio" id="01meter" name="question01" value="numA"> 1 meter <br>
                 <!-- <label for="01meter">1 meter / 3 feet</label> <br> -->
-                <input type="radio" id="03meter" name="droneDimension" value="numB"> 3 meter <br>
+                <input type="radio" id="03meter" name="question01" value="numB"> 3 meter <br>
                 <!-- <label for="01meter">3 meter / 10 feet</label> <br> -->
-                <input type="radio" id="08meter" name="droneDimension" value="numC"> 8 meter <br>
+                <input type="radio" id="08meter" name="question01" value="numC"> 8 meter <br>
                 <!-- <label for="01meter">8 meter / 25 feet</label> <br> -->
-                <input type="radio" id="over08meter" name="droneDimension" value="numD"> &gt;8 meter <br>
+                <input type="radio" id="over08meter" name="question01" value="numD"> &gt;8 meter <br>
                 <!-- <label for="01meter">&gt;8 meter / 25 feet</label> <br> -->
                 <input type="button" value="Submit" onclick="addFormElement(); this.disabled = true;">
             </fieldset>
             </form>
-        <!--</form> -->
+        </div>
     </body>
 </html>
