--- a/form/grc.html
+++ b/form/grc.html
@@ -29,7 +29,7 @@
                 <!-- <label for="01meter">8 meter / 25 feet</label> <br> -->
                 <input type="radio" id="over08meter" name="question01" value="numD"> &gt;8 meter <br>
                 <!-- <label for="01meter">&gt;8 meter / 25 feet</label> <br> -->
-                <input type="button" value="Submit" onclick="addFormElement(); this.disabled = true;">
+                <!-- <input type="button" value="Submit" onclick="addFormElement(); this.disabled = true;"> -->
             </fieldset>
             </form>
         </div>
