added loginBtn to register page and registerBtn

--- a/registrering.html
+++ b/registrering.html
@@ -13,6 +13,7 @@
     <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
         <button id="faktaBtn">Læs fakta om SORA her</button>
+        <button id="loginBtn">Login her</button>
     </div>
     <img class="backgroundImage" src="Pictures/HeaderPicture.jpg"></img>
   </header>
