--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -27,11 +27,30 @@
         <div class="userInfo">
             <img id="profileImg" src="Pictures\defaultprofile.png" alt="Profilbillede">
             <div class="nameInfo">
-                <p>Name: <input type="text" id="infoInput" disabled><img id="editBtn" src="Pictures\editBtn2.png" alt="edit"></p>
-                <p>Company: <input type="text" id="infoInput" disabled></p>
-                <p>Mail: <input type="text" id="infoInput" disabled></p>                
-                <p>Tel.: <input type="text" id="infoInput" disabled></p>
-                <p>Country: <input type="text" id="infoInput" disabled></p>
+                <button id="editBtn">Edit</button>
+                <div class="inputDiv">
+                    <form action="" method="POST">
+                        <label for="name">Name* : </label>
+                        <input type="text" id="name" class="infoInput" disabled required>
+                        <br><br>
+                        <label for="lastname">Last name* : </label>
+                        <input type="text" id="lastname" class="infoInput" disabled required>
+                        <br><br>
+                        <label for="company">Company: </label>
+                        <input type="text" id="company" class="infoInput" disabled>
+                        <br><br>
+                        <label for="mail">E-mail* : </label>
+                        <input type="email" id="mail" class="infoInput" disabled required>
+                        <br><br>
+                        <label for="tel">Tel.: </label>
+                        <input type="tel" id="tel" class="infoInput" disabled pattern="[+]{1}[1-9]{8}">
+                        <br><br>
+                        <label for="country">Country: </label>
+                        <input type="text" id="country" class="infoInput" disabled>
+                        <br><br>
+                        <button type="submit" id="applyBtn" hidden>Apply changes</button>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="content">
