--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -11,12 +11,13 @@
             <a href="index.html">Hjem</a>
             <a href="#brugerprofil">Profil</a>
             <a id="ansBtn">Ansøgninger</a>
+            <button id="btn" class="msgBtn">Meddelelser (0)</button>
             <div class="ddContent">
                 <button id="btn" onclick="location.href='form.html'">Opret ny Ansøgning</button> 
                 <button id="btn" class="godkendtBtn">Godkendte</button>
                 <button id="btn" class="inDevBtn">Igangværende</button> 
                 <button id="btn" class="afventBtn">Afventende</button> 
-                <button id="btn" class="afvistBtn">Afviste</button>  
+                <button id="btn" class="afvistBtn">Afviste</button>
             </div>
             <a href="#home" id="logud">Log ud</a>
         </div>
@@ -30,22 +31,22 @@
                 <button id="editBtn">Edit</button>
                 <div class="inputDiv">
                     <form action="" method="POST">
-                        <label for="name">Name* : </label>
+                        <label for="name">Name*</label>
                         <input type="text" id="name" class="infoInput" disabled required>
                         <br><br>
-                        <label for="lastname">Last name* : </label>
+                        <label for="lastname">Last name*</label>
                         <input type="text" id="lastname" class="infoInput" disabled required>
                         <br><br>
-                        <label for="company">Company: </label>
+                        <label for="company">Company</label>
                         <input type="text" id="company" class="infoInput" disabled>
                         <br><br>
-                        <label for="mail">E-mail* : </label>
+                        <label for="mail">E-mail*</label>
                         <input type="email" id="mail" class="infoInput" disabled required>
                         <br><br>
-                        <label for="tel">Tel.: </label>
+                        <label for="tel">Tel.</label>
                         <input type="tel" id="tel" class="infoInput" disabled pattern="[+]{1}[1-9]{8}">
                         <br><br>
-                        <label for="country">Country: </label>
+                        <label for="country">Country</label>
                         <input type="text" id="country" class="infoInput" disabled>
                         <br><br>
                         <button type="submit" id="applyBtn" hidden>Apply changes</button>
