need fix: addFormElement()'s need to run only only once

--- a/form/grc.html
+++ b/form/grc.html
@@ -19,8 +19,8 @@
             <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
         </div>
         <div id="GRC">
-            <form id="q1"> <!-- q1 -->
-            <fieldset> <legend> Drones maksimale karakteristika? </legend>
+            <form id="form01"> <!-- q1 -->
+            <fieldset id="question01"> <legend> Drones maksimale karakteristika? </legend>
                 <input type="radio" id="01meter" name="question01" value="numA"> 1 meter <br>
                 <!-- <label for="01meter">1 meter / 3 feet</label> <br> -->
                 <input type="radio" id="03meter" name="question01" value="numB"> 3 meter <br>
