everything works, make it pretty now

--- a/form/grc.html
+++ b/form/grc.html
@@ -19,19 +19,19 @@
             <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
         </div>
         <div id="GRC">
-            <form id="form01"> <!-- q1 -->
-            <fieldset id="question01"> <legend> Drones maksimale karakteristika? </legend>
-                <input type="radio" id="01meter" name="question01" value="numA"> 1 meter <br>
+            <!-- <form id="form01"> -->
+            <!-- <fieldset id="question01"> <legend> Drones maksimale karakteristika? </legend> -->
+                <!-- <input type="radio" id="01meter" name="question01" value="numA"> 1 meter <br> -->
                 <!-- <label for="01meter">1 meter / 3 feet</label> <br> -->
-                <input type="radio" id="03meter" name="question01" value="numB"> 3 meter <br>
+                <!-- <input type="radio" id="03meter" name="question01" value="numB"> 3 meter <br> -->
                 <!-- <label for="01meter">3 meter / 10 feet</label> <br> -->
-                <input type="radio" id="08meter" name="question01" value="numC"> 8 meter <br>
+                <!-- <input type="radio" id="08meter" name="question01" value="numC"> 8 meter <br> -->
                 <!-- <label for="01meter">8 meter / 25 feet</label> <br> -->
-                <input type="radio" id="over08meter" name="question01" value="numD"> &gt;8 meter <br>
+                <!-- <input type="radio" id="over08meter" name="question01" value="numD"> &gt;8 meter <br> -->
                 <!-- <label for="01meter">&gt;8 meter / 25 feet</label> <br> -->
                 <!-- <input type="button" value="Submit" onclick="addFormElement(); this.disabled = true;"> -->
-            </fieldset>
-            </form>
+            <!-- </fieldset> -->
+            <!-- </form> -->
         </div>
     </body>
 </html>
