fix login page + det løse

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button class="dopebtn" id="myBtn2">Hihi</button>
     </div>
 
-    <script src="JS/mainscript.js"></script>
+    <script src="mainscript.js"></script>
   </body>
 </html>
 
