--- a/registrering.html
+++ b/registrering.html
@@ -8,7 +8,7 @@
   
   <title>Register</title>
   <link rel="stylesheet" href="styles/RegisterStyles.css">
-  <script defer src="JS/registrering.js"></script>
+  <script defer src="registrering.js"></script>
   <header>
     <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
