--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
         <button id="registerBtn">Register</button>
-        <button id="loginBtn">Login</button>
+        <button id="loginBtn" onclick="location.href='login.html'">Login</button>
       </div>
     </header>
   </head>
