--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -12,7 +12,7 @@
             <a href="#brugerprofil">Profil</a>
             <a id="ansBtn">Ansøgninger</a>
             <div class="ddContent">
-                <button id="btn" onclick="location.href='form.html'">Opret ny Ansøgning</button> 
+                <button id="btn" onclick="location.href='../form/grc.html'">Opret ny Ansøgning</button> 
                 <button id="btn" class="godkendtBtn">Godkendte</button>
                 <button id="btn" class="inDevBtn">Igangværende</button> 
                 <button id="btn" class="afventBtn">Afventende</button> 
