unique ID for Btns

--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -12,11 +12,11 @@
             <a href="#brugerprofil">Profil</a>
             <a id="ansBtn">Ansøgninger</a>
             <div class="ddContent">
-                <button id="btn" onclick="location.href='../form/grc.html'">Opret ny Ansøgning</button> 
-                <button id="btn" class="godkendtBtn">Godkendte</button>
-                <button id="btn" class="inDevBtn">Igangværende</button> 
-                <button id="btn" class="afventBtn">Afventende</button> 
-                <button id="btn" class="afvistBtn">Afviste</button>  
+                <button id="CreateBtn" onclick="location.href='../form/grc.html'">Opret ny Ansøgning</button> 
+                <button id="ApprovedBtn" class="godkendtBtn">Godkendte</button>
+                <button id="OngoingBtn" class="inDevBtn">Igangværende</button> 
+                <button id="OnHoldBtn" class="afventBtn">Afventende</button> 
+                <button id="DeclinedBtn" class="afvistBtn">Afviste</button>  
             </div>
             <a href="#home" id="logud">Log ud</a>
         </div>
