--- a/faktaomansoegning.html
+++ b/faktaomansoegning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="da-DK">
   <head>
-    <link rel="stylesheet" href="faktastyles.css" />
+    <link rel="stylesheet" href="styles/faktastyles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
