--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="content">
         <h1>Overskrift</h1>
         <p>Her skal der bare stå noget fucking fedt!!</p>
-        <button class="dopebtn" id="myBtn">Ansøg nu!</button>
+        <button class="dopebtn" id="myBtn" onclick="location.href='/form/grc.html'">Ansøg nu!</button>
       </div>
     </div>
 
