--- a/form/grc.html
+++ b/form/grc.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script> const MAINFORM = "GRC"; </script>
         <script src="form.js" defer></script>
         <title>SORA</title>
         <header>
