--- a/form/arc.html
+++ b/form/arc.html
@@ -7,11 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script> const MAINFORM = "ARC"; </script>
         <script src="form.js" defer></script>
-        <title>SORA</title>
+        <title>SORA - ARC</title>
         <header>
             <div class="topnav" id="fakta_topnav">
                 <a href="#login">User1</a>
-                <h1>GRC</h1>
+                <h1>ARC</h1>
             </div>
         </header>
     </head>
@@ -19,7 +19,7 @@
         <div class="content">
             <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
         </div>
-        <div id="GRC">
+        <div id="ARC">
         </div>
     </body>
 </html>
