--- a/form/grc.html
+++ b/form/grc.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script> const MAINFORM = "GRC"; </script>
         <script src="form.js" defer></script>
-        <title>SORA</title>
+        <title>SORA - GRC</title>
         <header>
             <div class="topnav" id="fakta_topnav">
                 <a href="#login">User1</a>
