--- a/form/grc.html
+++ b/form/grc.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="../styles/styles.css" />
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <script> const MAINFORM = "GRC"; </script>
-        <script src="form.js" defer></script>
-        <title>SORA - GRC</title>
-        <header>
-            <div class="topnav" id="fakta_topnav">
-                <a href="#login">User1</a>
-                <h1>GRC</h1>
-            </div>
-        </header>
-    </head>
-    <body>
-        <div class="content">
-            <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
-        </div>
-        <div id="GRC">
-        </div>
-    </body>
+  <head>
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      const MAINFORM = "GRC";
+    </script>
+    <script src="form.js" defer></script>
+    <title>SORA - GRC</title>
+    <header>
+      <div class="topnav" id="fakta_topnav">
+        <a href="#login">User1</a>
+        <h1>GRC</h1>
+      </div>
+    </header>
+  </head>
+  <body>
+    <div class="content">
+      <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
+    </div>
+    <div id="GRC"></div>
+  </body>
 </html>
