--- a/form/grc.html
+++ b/form/grc.html
@@ -8,6 +8,7 @@
     <script>
       const MAINFORM = "GRC";
     </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="form.js" defer></script>
     <title>SORA - GRC</title>
     <header>
@@ -19,7 +20,6 @@
   </head>
   <body>
     <div class="content">
-      <h1>Trin 1 .. Trin 2 .. Trin 10</h1>
     </div>
     <div id="GRC"></div>
   </body>
