--- a/sail.html
+++ b/sail.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sailHTML.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js" defer></script>
-    <script src="sailHTML.js" defer></script>
-    
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.6/jspdf.plugin.autotable.min.js" defer></script> 
+    <script src="sailHTML.js" defer></script>    
     <title>SAIL PDF</title>
 </head>
 <body>
+    <h3>Final OSO</h3>
     <div id="sailDiv"></div>
     <button id="PDFbtn" onclick="GeneratePDF()">Make PDF</button>
 </body>
