fjernet den der sorte dimmer i bunden

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
         <button id="registerBtn">Register</button>
-        <button id="loginBtn" onclick="location.href='login.html'">Login</button>
+        <button id="loginBtn" onclick="location.href='login.html'">
+          Login
+        </button>
       </div>
     </header>
   </head>
@@ -18,14 +20,6 @@
     <video id="myVideo" autoplay loop muted>
       <source src="Pictures/broll.mp4" type="video/mp4" />
     </video>
-
-    <div id="main-page">
-      <div class="content">
-        <h1>Overskrift</h1>
-        <p>Her skal der bare stå noget fucking fedt!!</p>
-        <button class="dopebtn" id="myBtn" onclick="location.href='/form/grc.html'">Ansøg nu!</button>
-      </div>
-    </div>
 
     <div id="login-page" class="content">
       <h1>Wassup</h1>
@@ -36,7 +30,3 @@
     <script src="mainscript.js"></script>
   </body>
 </html>
-
-<!--
-    <a href="#login">Login</a>
--->
