Opret ny Ansøgning -> GRC -> ARC -> Bruger profil

--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -13,7 +13,7 @@
             <a id="ansBtn">Ansøgninger</a>
             <button id="btn" class="msgBtn">Meddelelser (0)</button>
             <div class="ddContent">
-                <button id="btn" onclick="CreateForm()">Opret ny Ansøgning</button> 
+                <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button> 
                 <button id="btn" class="godkendtBtn">Godkendte</button>
                 <button id="btn" class="inDevBtn">Igangværende</button> 
                 <button id="btn" class="afventBtn">Afventende</button> 
