html fix + TODO: 5x id='btn'

--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -19,10 +19,9 @@
                 <button id="btn" class="afventBtn">Afventende</button> 
                 <button id="btn" class="afvistBtn">Afviste</button>
             </div>
-            <a href="#home" id="logud">Log ud</a>
+            <a href="#home" id="logudBig">Log ud</a>
         </div>
-        <a href="#home" id="logud">Log ud</a>
-      </div>
+        <a href="#home" id="logudSmall">Log ud</a>
     </header>
   </head>
   <body>
@@ -57,11 +56,9 @@
             </div>
         </div>
         <div class="content">
-
         </div>
       </div>
       <div class="content"></div>
-    </div>
   </body>
   <script src="brugerprofil.js"></script>
 </html>
