fix href register

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
-        <button id="registerBtn">Register</button>
+        <button id="registerBtn" onclick="location.href='registrering.html'">Register</button>
         <button id="loginBtn" onclick="location.href='login.html'">
           Login
         </button>
