Mangler kommentarer til koden, men det bliver fikset senere i dag. kh

--- a/sail.html
+++ b/sail.html
@@ -12,6 +12,7 @@
     <title>SAIL PDF</title>
 </head>
 <body>
+    <button type="submit" id="saveBtn">Gem og afslut</button>
     <h3>Final OSO</h3>
     <div id="sailDiv"></div>
     <button id="PDFbtn" onclick="GeneratePDF()">Make PDF</button>
