loading bar + redirects

--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,22 +10,23 @@
     <header>
         <div class="topnav">
             <a href="index.html">Hjem</a>
-            <a href="#brugerprofil">Profil</a>
+            <a href="/brugerprofil.html">Profil</a>
             <a id="ansBtn">Ansøgninger</a>
             <button id="btn" class="msgBtn">Meddelelser (0)</button>
             <div class="ddContent">
-                <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button> 
+                <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
                 <button id="btn" class="godkendtBtn">Godkendte</button>
-                <button id="btn" class="inDevBtn">Igangværende</button> 
-                <button id="btn" class="afventBtn">Afventende</button> 
+                <button id="btn" class="inDevBtn">Igangværende</button>
+                <button id="btn" class="afventBtn">Afventende</button>
                 <button id="btn" class="afvistBtn">Afviste</button>
             </div>
-            <a href="#home" id="logudBig">Log ud</a>
+            <a href="/index.html" id="logudBig">Log ud</a>
         </div>
-        <a href="#home" id="logudSmall">Log ud</a>
+        <a href="/index.html" id="logudSmall">Log ud</a>
     </header>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="userContainer">
         <div class="userInfo">
             <img id="profileImg" src="Pictures\defaultprofile.png" alt="Profilbillede">
@@ -57,8 +59,9 @@
         </div>
         <div class="content">
         </div>
-      </div>
-      <div class="content"></div>
-  </body>
-  <script src="brugerprofil.js"></script>
+    </div>
+    <div class="content"></div>
+</body>
+<script src="brugerprofil.js"></script>
+
 </html>
