--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -15,10 +15,7 @@
             <button id="btn" class="msgBtn">Meddelelser (0)</button>
             <div class="ddContent">
                 <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
-                <button id="btn" class="godkendtBtn">Godkendte</button>
-                <button id="btn" class="inDevBtn">Igangværende</button>
-                <button id="btn" class="afventBtn">Afventende</button>
-                <button id="btn" class="afvistBtn">Afviste</button>
+                <button id="btn" class="godkendtBtn">Gamle Ansøgninger</button>
             </div>
             <a href="/index.html" id="logudBig">Log ud</a>
         </div>
@@ -60,7 +57,6 @@
         <div class="content">
         </div>
     </div>
-    <div class="content"></div>
 </body>
 <script src="brugerprofil.js"></script>
 
