Er nu stylet til consisten styling og pænere

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
       <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
-        <button id="registerBtn" onclick="location.href='registrering.html'">Register</button>
-        <button id="loginBtn" onclick="location.href='login.html'">
-          Login
+        <button class="href" onclick="location.href='registrering.html'">
+          Register
         </button>
+        <button class="href" onclick="location.href='login.html'">Login</button>
       </div>
     </header>
   </head>
