--- a/brugerprofil.html
+++ b/brugerprofil.html
@@ -1,63 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/bpstyles.css" />
     <title>Brugerprofil</title>
     <header>
-        <div class="topnav">
-            <a href="index.html">Hjem</a>
-            <a href="/brugerprofil.html">Profil</a>
-            <a id="ansBtn">Ansøgninger</a>
-            <button id="btn" class="msgBtn">Meddelelser (0)</button>
-            <div class="ddContent">
-                <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
-                <button id="btn" class="godkendtBtn">Gamle Ansøgninger</button>
-            </div>
-            <a href="/index.html" id="logudBig">Log ud</a>
+      <div class="topnav">
+        <a href="index.html">Hjem</a>
+        <a href="/brugerprofil.html">Profil</a>
+        <a id="ansBtn">Ansøgninger</a>
+        <div class="ddContent">
+          <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
+          <button id="btn" class="godkendtBtn">Gamle Ansøgninger</button>
         </div>
-        <a href="/index.html" id="logudSmall">Log ud</a>
+        <a href="/index.html" id="logudBig">Log ud</a>
+      </div>
+      <a href="/index.html" id="logudSmall">Log ud</a>
     </header>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="userContainer">
-        <div class="userInfo">
-            <img id="profileImg" src="Pictures\defaultprofile.png" alt="Profilbillede">
-            <div class="nameInfo">
-                <button id="editBtn">Edit</button>
-                <div class="inputDiv">
-                    <form action="" method="POST">
-                        <label for="name">Name*</label>
-                        <input type="text" id="name" class="infoInput" disabled required>
-                        <br><br>
-                        <label for="lastname">Last name*</label>
-                        <input type="text" id="lastname" class="infoInput" disabled required>
-                        <br><br>
-                        <label for="company">Company</label>
-                        <input type="text" id="company" class="infoInput" disabled>
-                        <br><br>
-                        <label for="mail">E-mail*</label>
-                        <input type="email" id="mail" class="infoInput" disabled required>
-                        <br><br>
-                        <label for="tel">Tel.</label>
-                        <input type="tel" id="tel" class="infoInput" disabled pattern="[+]{1}[1-9]{8}">
-                        <br><br>
-                        <label for="country">Country</label>
-                        <input type="text" id="country" class="infoInput" disabled>
-                        <br><br>
-                        <button type="submit" id="applyBtn" hidden>Apply changes</button>
-                    </form>
-                </div>
-            </div>
+      <div class="userInfo">
+        <img
+          id="profileImg"
+          src="Pictures\defaultprofile.png"
+          alt="Profilbillede"
+        />
+        <div class="nameInfo">
+          <button id="editBtn">Edit</button>
+          <div class="inputDiv">
+            <form action="" method="POST">
+              <label for="name">Name*</label>
+              <input
+                type="text"
+                id="name"
+                class="infoInput"
+                disabled
+                required
+              />
+              <br /><br />
+              <label for="lastname">Last name*</label>
+              <input
+                type="text"
+                id="lastname"
+                class="infoInput"
+                disabled
+                required
+              />
+              <br /><br />
+              <label for="company">Company</label>
+              <input type="text" id="company" class="infoInput" disabled />
+              <br /><br />
+              <label for="mail">E-mail*</label>
+              <input
+                type="email"
+                id="mail"
+                class="infoInput"
+                disabled
+                required
+              />
+              <br /><br />
+              <label for="tel">Tel.</label>
+              <input
+                type="tel"
+                id="tel"
+                class="infoInput"
+                disabled
+                pattern="[+]{1}[1-9]{8}"
+              />
+              <br /><br />
+              <label for="country">Country</label>
+              <input type="text" id="country" class="infoInput" disabled />
+              <br /><br />
+              <button type="submit" id="applyBtn" hidden>Apply changes</button>
+            </form>
+          </div>
         </div>
-        <div class="content">
-        </div>
+      </div>
+      <div class="content"></div>
     </div>
-</body>
-<script src="brugerprofil.js"></script>
-
+  </body>
+  <script src="brugerprofil.js"></script>
 </html>
