--- a/common/brugerprofil.html
+++ b/common/brugerprofil.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/bpstyles.css" />
+    <link rel="stylesheet" href="/css/bpstyles.css" />
     <title>Brugerprofil</title>
     <header>
       <div class="topnav">
-        <a href="index.html">Hjem</a>
+        <a href="/index.html">Hjem</a>
         <a id="ansBtn">Ansøgninger</a>
         <div class="ddContent">
           <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
@@ -29,5 +29,5 @@
       <div class="content"></div>
     </div>
   </body>
-  <script src="brugerprofil.js"></script>
+  <script src="/js/brugerprofil.js"></script>
 </html>
