--- a/common/faktaomansoegning.html
+++ b/common/faktaomansoegning.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="da-DK">
   <head>
-    <link rel="stylesheet" href="styles/faktastyles.css" />
+    <link rel="stylesheet" href="/css/faktastyles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,9 +14,9 @@
   <body>
     <div class="sidenav" id="fakta_sidenav">
 </div>
-      <img src="/Pictures/HeaderPicture.jpg" id="background_picture"></img>
+      <img src="/media/HeaderPicture.jpg" id="background_picture"></img>
      <div class="boxed"id="text_box">
-         <script src="fakta.js"></script>
+         <script src="/js/fakta.js"></script>
      </div>
   </body>
 </html>
