--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="da-DK">
   <head>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,16 +9,16 @@
     <header>
       <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
-        <button class="href" onclick="location.href='registrering.html'">
+        <button class="href" onclick="location.href='/common/registrering.html'">
           Register
         </button>
-        <button class="href" onclick="location.href='login.html'">Login</button>
+        <button class="href" onclick="location.href='/common/login.html'">Login</button>
       </div>
     </header>
   </head>
   <body>
     <video id="myVideo" autoplay loop muted>
-      <source src="Pictures/broll.mp4" type="video/mp4" />
+      <source src="/media/broll.mp4" type="video/mp4" />
     </video>
 
     <div id="login-page" class="content">
