--- a/common/arc.html
+++ b/common/arc.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script> const MAINFORM = "ARC";</script>
-    <script src="form.js" defer></script>
+    <script src="/js/form.js" defer></script>
     <title>SORA - ARC</title>
     <header>
         <div class="topnav" id="fakta_topnav">
