--- a/common/grc.html
+++ b/common/grc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
       const MAINFORM = "GRC";
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="form.js" defer></script>
+    <script src="/js/form.js" defer></script>
     <title>SORA - GRC</title>
     <header>
       <div class="topnav" id="fakta_topnav">
