--- a/common/login.html
+++ b/common/login.html
@@ -7,15 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
   <title>Login</title>
-  <link rel="stylesheet" href="styles/loginStyles.css">
-  <script defer src="login-page.js"></script>
+  <link rel="stylesheet" href="/css/loginStyles.css">
+  <script defer src="/js/login-page.js"></script>
   <header>
     <div class="topnav">
         <h1 id="headerTitle">SW B2-21 2. semester projekt</h1>
         <button id="faktaBtn">Læs fakta om SORA her</button>
         <button id="registerBtn">Registrer dig her</button>
     </div>
-    <img class="backgroundImage" src="Pictures/HeaderPicture.jpg"></img>
+    <img class="backgroundImage" src="/media/HeaderPicture.jpg"></img>
   </header>
 </head>
 
