--- a/common/sail.html
+++ b/common/sail.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sailHTML.css">
+    <link rel="stylesheet" href="/css/sailHTML.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.6/jspdf.plugin.autotable.min.js" defer></script> 
-    <script src="sailHTML.js" defer></script>    
+    <script src="/js/sailHTML.js" defer></script>    
     <title>SAIL PDF</title>
 </head>
 <body>
