--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <button class="dopebtn" id="myBtn2">Hihi</button>
     </div>
 
-    <script src="mainscript.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
