kommentarer og andet

--- a/common/brugerprofil.html
+++ b/common/brugerprofil.html
@@ -14,7 +14,7 @@
           <button id="btn" onclick="beginForm()">Opret ny Ansøgning</button>
           <button id="btn" class="godkendtBtn">Gamle Ansøgninger</button>
         </div>
-        <a href="/index.html" id="logudBig">Log ud</a>
+        <a href="../common/index.html" id="logudBig">Log ud</a>
       </div>
     </header>
   </head>
@@ -22,8 +22,7 @@
     <div class="userContainer">
       <div class="userInfo">
         <div class="nameInfo">
-          <div class="inputDiv">
-          </div>
+          <div class="inputDiv"></div>
         </div>
       </div>
       <div class="content"></div>
